--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Car Rent</title>
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
           crossorigin="anonymous" />
-
-         
 </head>
 <body>
     <div id="root"></div>
-    <script type="text/babel" src="./public/main.js"></script>
+    <script src="../dist/bundle.js"></script>
 </body>
 </html>
-
